# pulpitink

./: .gitignore  AGENTS.md  BUNDLE_NOTE.md  CHANGELOG.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pulpit-ink-sidecar.spec  pulpit-ink.spec  pulpitink-sidecar.spec  pulpitink.spec  pyproject.toml  requirements-dev.txt  requirements.txt  sermonscript.spec
.github/workflows/: build-windows.yml  test.yml
docs/: architecture.md  audio-pipeline.md  branding-rename-plan.md  common-tail-instruction.md  decision-log.md  deferred-youtube-import.md  index.html  known-limitations.md  license-policy.md  original-template-integration.md  performance-profile.md  product-spec.md  reference-alignment.md  release-roadmap.md  roadmap-tasks.md  transcription-pipeline.md  user-guide.md  vibe-coding-goal-1.md  vibe-coding-goal-2-fixed.md  vibe-coding-goal-3.md  vibe-coding-goals-3phase-fixed.md  vibe-coding-goals-3phase.md  vibe-coding-goals.md  youtube-import-deferred.md
docs/architecture/: database-schema.md  processing-pipeline.md  system-architecture.md  tauri-hybrid-analysis.md
docs/design/: jamo-fuzzy-matching.md  jamo-fuzzy-tuning-report.md  tauri-hybrid-architecture.md
docs/implementation/: audio-preprocessing.md  cli-spec.md  export-formats.md  gui-spec.md  postprocessing.md  reference-assisted-transcription.md  transcription-engine.md
docs/legal/: license-policy.md  third-party-references.md
docs/product/: product-requirements.md  v1.0-feature-expansion-plan.md
docs/release/: release-checklist.md  roadmap.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: GlossaryTab.tsx  PathPicker.tsx  UpdateBanner.tsx  WaveformPlayer.tsx  YouTubeDialog.tsx
frontend/src/lib/: sidecar.ts  types.ts
original_templates/: AGENTS_original.md  CHANGELOG_original.md  HISTORY_original.md
scripts/: build_windows.ps1  create_installer.ps1  make_portable_zip.ps1  pulpit-ink.iss  pulpitink.iss  stress_test.py
src/pulpit_ink/: __init__.py
src/pulpit_ink/app/: __init__.py  exceptions.py  logging_config.py  main.py  paths.py
src/pulpit_ink/cli/: main.py
src/pulpit_ink/services/: __init__.py  diagnostics.py  model_service.py  settings_service.py  transcribe_service.py
src/pulpit_ink/storage/: __init__.py  database.py  job_repository.py
src/pulpit_ink/ui/: __init__.py  glossary_tab.py  main_window.py  transcript_editor.py  worker.py
src/pulpitink/: __init__.py
src/pulpitink/app/: __init__.py  exceptions.py  logging_config.py  main.py
src/pulpitink/cli/: main.py
src/pulpitink/services/: __init__.py  diagnostics.py  model_service.py  settings_service.py  transcribe_service.py
src/pulpitink/storage/: __init__.py  database.py  job_repository.py
src/pulpitink/ui/: __init__.py  main_window.py  transcript_editor.py  worker.py
src/sermonscript/: __init__.py
src/sermonscript/app/: __init__.py  exceptions.py  logging_config.py  main.py  paths.py
src/sermonscript/cli/: main.py
src/sermonscript/services/: __init__.py  (+4 more)
tests/: conftest.py  test_batch_queue.py  test_cli_tauri_helpers.py  test_correction_engine.py  test_diarizer.py  test_doctor.py  test_docx_exporter.py  test_editor_hotkeys.py  test_exporters.py  test_glossary_service.py  test_i18n.py  test_input_validation.py  test_jamo_matching.py  test_model_service.py  test_pipeline_integration.py  test_postprocess.py  test_presets.py  test_reference_parser.py  test_settings_service.py  test_storage.py  test_timestamps.py  test_transcribe_persistence.py  test_transcript_editor_repo.py  test_update_checker.py  test_youtube.py
tests/integration/: README.md  extract_docx.py  results.md  verify_fuzzy.py  verify_run.py
(+87 files in other folders)
