[project]
name = "sermonscript"
version = "0.1.0"
description = "Local-first desktop app for transcribing sermons, lectures, and meetings."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Aiden Park" }
]
dependencies = [
  "typer",
  "rich",
  "pydantic",
  "platformdirs"
]

[project.optional-dependencies]
stt = [
  "faster-whisper"
]
gui = [
  "PySide6"
]
dev = [
  "pytest",
  "ruff"
]

[project.scripts]
sermonscript = "sermonscript.cli.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
