[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sermonscript"
version = "0.3.0"
description = "Local-first desktop app for transcribing sermons, lectures, and meetings."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Aiden Park" }
]
keywords = ["stt", "whisper", "sermon", "transcription"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.0",
  "pydantic>=2.0",
  "platformdirs>=4.0",
  "faster-whisper>=1.0",
]

[project.optional-dependencies]
gui = [
  "PySide6"
]
reference = [
  "rapidfuzz"
]
dev = [
  "pytest>=7.0",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/jeiel85/sermon-script"
Issues = "https://github.com/jeiel85/sermon-script/issues"

[project.scripts]
sermonscript = "sermonscript.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "build",
  "dist",
  "exports",
  "cache",
  "models",
  "original_templates",
  "frontend",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B018"]
"src/sermonscript/cli/*.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
