[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulpit-ink"
version = "0.4.7"
description = "설교필기 — 로컬 우선 설교/강의/회의 녹음 STT 데스크톱 앱"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Aiden Park" }
]
keywords = ["stt", "whisper", "sermon", "transcription", "pulpit-ink"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.0",
  "pydantic>=2.0",
  "platformdirs>=4.0",
  "faster-whisper>=1.0",
  "python-docx>=1.1.0",
]

[project.optional-dependencies]
gui = [
  "PySide6"
]
reference = [
  "rapidfuzz"
]
dev = [
  "pytest>=7.0",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://jeiel85.github.io/pulpit-ink/"
Issues = "https://github.com/jeiel85/pulpit-ink/issues"

[project.scripts]
pulpit-ink = "pulpit_ink.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "build",
  "dist",
  "exports",
  "cache",
  "models",
  "original_templates",
  "frontend",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B018"]
"src/pulpit_ink/cli/*.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
